--- a/BOOKSHELF/static/css/bookdetails.css
+++ b/BOOKSHELF/static/css/bookdetails.css
@@ -1,17 +1,9 @@
 *{
     margin:0px;
 }
-html,body{
-    height:100vh;
-}
 .main{
     min-height: 900px;
-    
 }
-.content{
-    min-height:fit-content;
-}
-
 .nav{
     height:80px;
     width:cover;
@@ -35,16 +27,16 @@ html,body{
 }
 .list ul{
     height:80px;
-    width:300px;
+    width:400px;
     display:flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items:center;
-   
+    position:relative;
+    right:20px;
+    transform:translate(30px);
    
 }
 .list a{
-    display:flex;
-    justify-content:flex-start;
     text-decoration:none;
     color:black;
 }
@@ -90,12 +82,14 @@ html,body{
     right:30px;
     background-color:aqua;
     border:2px solid black;
+  
 
 }
 .cart img{
     height:40px;
     width:40px;
 }
+
 .cart p{
 display:flex;
 justify-content: center;
@@ -128,104 +122,28 @@ font-size:20px;
 .nav2 a:hover{
    transform:translateY(-3px);
    color:blueviolet;
-    
-}
-.out{
-    min-height:auto;
-    width:100%;
-    /* background-color:yellow; */
-}
+}  
+ .star-rating {
+            direction: rtl;
+            unicode-bidi: bidi-override;
+            font-size: 2rem;
+            display: inline-block;
+        }
 
-.upload {
-    min-height:max-content;
-    width:96%;
-    position:absolute;
-    margin-left:40px;
-    top:170px;
-    display: grid;
-    grid-template-rows:repeat(auto-fit, minmax(250px,1fr)) ;
-    grid-template-columns: repeat(4, minmax(150px, 1fr));
-    gap:30px 30px;
-    /* padding: 20px; */
-    /* background-color:blue;
-    */
-}
+        .star-rating input[type="radio"] {
+            display: none;
+        }
 
-.output {
-    width:50%;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
-    background-color: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
-    /* background-color:red; */
-    
-}
+        .star-rating label {
+            color: gray;
+            cursor: pointer;
+        }
 
-.output:hover {
-    transform: translateY(-5px);
-}
+        .star-rating input[type="radio"]:checked ~ label {
+            color: gold;
+        }
 
-.output img {
-    width: 95%;
-    height: auto;
-    border-radius: 8px;
-}
-
-.output p {
-    margin: 5px 0;
-}
-
-del {
-    color: #888;
-}
-
-p:last-child {
-    color: #e44d26;
-    font-weight: bold;
-}
-.old{
-    transform:translate(40px,-3px)
-}
-.price{
-    transform:translate(-40px,20px);
-    font-weight:900;
-
-}
-.view a{
- font-size:20px;
- transform:translate(0px,10px);
- text-decoration:none;
-
-
-
-}
-.view {
-height:30px;
-border:2px solid black;
-background-color:#a9df85;
-text-align:center;
-border-radius:20px;
-}
-.output .dis{
-color:red;
-font-weight: 900;
-}
-.footer{
-   display:flex;
-   height:510px;
-    justify-content:space-around;
-    align-items:end;
-    background-color:black;
-    position:relative;
-    height:600px;
-}
-.table{
-    height:440px;
-    width:100%;
-    color:white;
-   
- 
-}
+        .star-rating label:hover,
+        .star-rating label:hover ~ label {
+            color: gold;
+        }
