--- a/BOOKSHELF/static/css/book_admin_index.css
+++ b/BOOKSHELF/static/css/book_admin_index.css
@@ -146,14 +146,27 @@ table{
     left:100px;
 }
 .btn{
-    height:30px;
-    width:100px;
-    background-color:rgb(147, 147, 245);
-    color:white;
+ 
+   
     border-radius:10px;
+    
+   
+   
+}
+.btn p{
     position:relative;
-    right:20px;
+    left:170px;
+    height:30px;
+    width:130px;
+    background-color:rgb(147, 147, 245);
+    font-size:20px;
+}
+.btn a{
+    
+    text-decoration:none;
     color:black;
+    
+
 }
 .list2{
     height:60px;
