--- a/BOOKSHELF/static/css/bookindex.css
+++ b/BOOKSHELF/static/css/bookindex.css
@@ -52,7 +52,7 @@
     height:25px;
     width:25px;
 } 
-.search input{
+.input{
     height:10px;
     width:300px;
     display:flex;
@@ -60,6 +60,7 @@
     align-items: center;
     position:relative;
     left:120px;
+    top:-500px;
     padding:10px;
     top:15px;
     border-radius:10px;
@@ -67,12 +68,12 @@
 .search img{
     height:30px;
     width:30px;
-    transform:translate(411px,-17px);
     background-color:yellow;
-    background-size: 40px,40px;
-    border-radius: 10px;
+    background-size:40px,40px;
+    border-radius:10px;
 
 }
+
 .cart{
     width:10%;
     display:flex;
@@ -148,23 +149,24 @@ font-size:20px;
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-    background-color: #f9f9f9;
+    background-color: hsla(93, 100%, 70%, 0.726);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s;
     /* background-color:red; */
     
 }
-.buttons{
+/* .buttons{
     display:flex;
+    flex-direction:column;
     justify-content:space-between;
     align-items:center;
     margin-top:10px;
-}
+} */
 .buy{
     width:100%;
-    height:40px;
-    background-color:blueviolet;
-    color:white;
+    height:30px;
+    background-color:rgb(179, 100, 231);
+    color:black;
     font-size:15px;
     font-weight:900;
     border-radius:10px;
@@ -173,6 +175,7 @@ font-size:20px;
     transition: transform 0.2s;
     margin-top:10px;
     margin-right:10px;
+    border:2px solid black;
 }
 .buy:hover {
     transform: translateY(-5px);
@@ -182,10 +185,10 @@ font-size:20px;
 }
 .add{
     width:100%;
-    height:40px;
-    background-color:yellowgreen;
-    color:white;
-    font-size:15px;
+    height:30px;
+    background-color:rgb(255, 166, 0);
+    color:black;
+   
     font-weight:900;
     border-radius:10px;
     border:none;
@@ -252,4 +255,9 @@ font-weight: 900;
     color:white;
    
  
+}
+.not_found{
+    font-size:30px;
+    text-align:center;
+    
 }
